# HL_Player

./: CMakeLists.txt  Launcher.cpp  README.md  main.cpp
include/: AudioPlay.h  AudioThread.h  Decode.h  Demux.h  DemuxThread.h  HComboBox.h  HLabel.h  LogoGLWidget.h  Play.h  PlayWidget.h  QtAudioPlay.h  RecordListItem.h  Reference.h  Resample.h  RootWidget.h  Slider.h  SqliteHelper.h  SubManager.h  ToolWidget.h  TopWidget.h  Util.h  VideoCall.h  VideoThread.h  VideoWidget.h
res/: HL_Player.sqlite  out.ass  res.qrc
res/icon/: HL_Player.sqlite
src/: AudioThread.cpp  Decode.cpp  Demux.cpp  DemuxThread.cpp  HComboBox.cpp  HLabel.cpp  LogoGLWidget.cpp  Play.cpp  PlayWidget.cpp  QtAudioPlay.cpp  RecordListItem.cpp  Resample.cpp  RootWidget.cpp  Slider.cpp  SqliteHelper.cpp  SubManager.cpp  ToolWidget.cpp  TopWidget.cpp  Util.cpp  VideoThread.cpp  VideoWidget.cpp
ui/: Play.ui  PlayWidget.ui  RecordListItem.ui  RootWidget.ui  ToolWidget.ui  TopWidget.ui
